fix: align the Paging to the middle

--- a/src/components/Paging/Paging.css
+++ b/src/components/Paging/Paging.css
@@ -1,4 +1,5 @@
 .paging-cont {
+	text-align: center;
 	margin: auto;
 }
 .paging-btn {
